--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,20 @@
-
-img.plane {
-    opacity: 0.5;
+#plane {
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
 }
 
+#plane::before {
+    background-image: url(../Images/plane_cut.png);
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    background-position: center;
+    content: "";
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    opacity: 0.18;
+}
